fix: Hero, Services, and About Grid layout issues

--- a/src/components/about/About.scss
+++ b/src/components/about/About.scss
@@ -74,6 +74,10 @@
   }
 }
 
+.about_description p {
+    color: var(--accent-color);
+  }
+
 .about_grid {
   max-width: 1100px;
   margin: 0 auto;
@@ -124,13 +128,13 @@
   .img {
     width: 100%;
     aspect-ratio: 4 / 5;
-    //  max-height: 360px;
+    // max-height: 360px;
     background: var(--bg-secondary);
     border-radius: 18px;
     border: 1px solid var(--border-color);
     overflow: hidden;
 
-@include minidesktop {
+    @include minidesktop {
       max-width: 320px;
     }
 
@@ -164,10 +168,10 @@
 .right {
   display: flex;
   flex-direction: column;
-  gap: 1.5rem;
+  gap: 1rem;
 
   @include tablet {
-    gap: 1.25rem;
+    gap: 1.2rem;
   }
 
   @include mobile {
@@ -353,7 +357,7 @@
 .capability_grid {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  gap: 1rem;
+  gap: .9rem;
 
   @include minidesktop {
     grid-template-columns: repeat(3, 1fr);
