--- a/src/components/hero/Hero.scss
+++ b/src/components/hero/Hero.scss
@@ -1,8 +1,9 @@
 @import "../../app.scss";
 
 .hero {
-  height: calc(100vh - 80px);
-  overflow: hidden;
+  min-height: calc(100svh - 80px);
+  // overflow-x: hidden;
+  // overflow-y: visible;
   background: linear-gradient(180deg, var(--bg-primary), var(--bg-secondary));
   position: relative;
   transition: background 0.3s ease;
@@ -36,7 +37,7 @@
 
   .wrapper {
     max-width: 1100px;
-    height: 100%;
+    min-height: 100%;
     margin: auto;
     display: flex;
     align-items: center;
@@ -80,6 +81,9 @@
         letter-spacing: -0.02em;
         color: var(--text-primary);
         transition: color 0.3s ease;
+         max-width: 100%;
+  word-break: break-word;
+  text-rendering: optimizeLegibility;
 
         span {
           color: var(--accent-color);
@@ -232,6 +236,7 @@
         border: 1px solid var(--border-color);
         cursor: grab;
         transition: all 0.3s ease;
+        overflow: hidden;
 
         &:active {
           cursor: grabbing;
@@ -345,6 +350,9 @@
     font-weight: bold;
     z-index: 0;
     transition: color 0.3s ease;
+      pointer-events: none;
+  -webkit-user-select: none;
+  user-select: none;
 
     @include tablet {
       font-size: 40vh;
