--- a/src/components/services/Services.scss
+++ b/src/components/services/Services.scss
@@ -2,7 +2,7 @@
 
 .services {
   background: var(--bg-primary);
-  min-height: 100vh;
+  min-height: 100svh;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -84,6 +84,9 @@
       }
 
       h1 {
+        max-width: 100%;
+        word-break: break-word;
+        text-rendering: optimizeLegibility;
         font-size: 80px;
         font-weight: 100;
         color: var(--text-primary);
@@ -162,8 +165,12 @@
     max-width: 1100px;
     margin: auto;
     gap: 1rem;
+    min-height: 0;
+overflow: visible;
 
     .box {
+      overflow: hidden;
+
       flex: 1;
       padding: 3rem;
       border: 0.5px solid var(--border-color);
@@ -177,10 +184,10 @@
         border-color: var(--accent-color);
         box-shadow: 0 0 25px rgba(0, 0, 0, 0.2);
 
-         h2 {
+        h2 {
       color: var(--text-primary);
     }
-       p {
+      p {
       color: var(--text-primary);
     }
       }
@@ -209,7 +216,7 @@
         }
 
         h2 {
-          font-size: 1rem;
+          font-size: .97rem;
         }
 
         button {
